# openclaw-inter-agent-message-queue

./: .env.example  .gitignore  AGENTS.md  BOOT.md  CLAUDE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  Makefile  README.md  TOOLS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agent/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md
openclaw_mq/: README.md  com.openclaw.mq.plist.example  mix.exs
openclaw_mq/config/: config.exs  test.exs
openclaw_mq/lib/: openclaw_mq.ex
openclaw_mq/lib/openclaw_mq/: application.ex  reaper.ex  registry.ex  store.ex
openclaw_mq/lib/openclaw_mq/api/: router.ex  ws_handler.ex  ws_router.ex
openclaw_mq/lib/openclaw_mq/cron/: entry.ex  scheduler.ex  store.ex
openclaw_mq/lib/openclaw_mq/gateway/: dispatcher.ex  rpc_client.ex
openclaw_mq/lib/openclaw_mq/pubsub/: message.ex
openclaw_mq/test/: openclaw_mq_test.exs
openclaw_mq/test/openclaw_mq/: reaper_test.exs  registry_test.exs  store_test.exs
openclaw_mq/test/openclaw_mq/api/: router_cron_test.exs  router_test.exs
openclaw_mq/test/openclaw_mq/cron/: entry_test.exs  store_test.exs  (+1 more)
scripts/: entrypoint.sh
sidecar/: mix.exs
sidecar/lib/iamq_sidecar/: mq_client.ex  mq_ws_client.ex
sidecar/test/: iamq_sidecar_cron_test.exs  iamq_sidecar_test.exs
spec/: API.md  ARCHITECTURE.md  CRON.md  LEARNINGS.md  PIPELINES.md  PROTOCOL.md  TESTING.md  TROUBLESHOOTING.md
spec/adr/: 001-message-queue-design.md  README.md
tools/pipeline_runner/: __init__.py  cli.py
tools/pipeline_runner/pipelines/: ci.py  deploy.py  health_check.py  queue_monitor.py
(+1 files in other folders)
