[tool.poetry]
name = "openclaw-iamq-tools"
version = "0.1.0"
description = "Python pipeline runner and operational tools for the OpenClaw Inter-Agent Message Queue"
authors = ["Redlex Gilgamesh"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "tools" },
]

[tool.poetry.scripts]
iamq-pipeline = "tools.pipeline_runner.cli:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
